----------------------------------------------------------------------
 OmegaT 5.7.0
----------------------------------------------------------------------
  0 Enhancements
  0 Bug fixes
  1 Localisation updates
----------------------------------------------------------------------
5.7.0 vs 5.6.0

  Localisation Updates:

  - Italian localisation updated to 5.6 (UI)

----------------------------------------------------------------------
 OmegaT 5.6.0 (2021-10-05)
----------------------------------------------------------------------
  5 Enhancements
  8 Bug fixes
  9 Localisation updates
----------------------------------------------------------------------
5.6.0 vs 5.5.0

  Bug fixes:

  - Glossary collisions with short Japanese terms
  https://sourceforge.net/p/omegat/bugs/1034/

  - Aggressive Font Fallback doesn't work on Java 11
  https://sourceforge.net/p/omegat/bugs/1051/

  - HTML2 filter displays empty segments in preserve space mode
  https://sourceforge.net/p/omegat/bugs/1062/

  - HTML2 filter rewrite encoding issues
  https://sourceforge.net/p/omegat/bugs/1064/

  - Effect of "Untranslated segments only" unclear
  https://sourceforge.net/p/omegat/bugs/995/

  - Glossary translation color not applied to term separator
  https://sourceforge.net/p/omegat/bugs/1071/

  - Short freeze when displaying dictionary entries
  https://sourceforge.net/p/omegat/bugs/1056/

  - Properties notification color is too bright in dark mode
  https://sourceforge.net/p/omegat/bugs/1055/

  Implemented requests:

  - Add extra ignore patterns for ".git", ".hg", and ".repositories"
  https://sourceforge.net/p/omegat/feature-requests/1589/

  - Support using arbitrary git branch name
  https://sourceforge.net/p/omegat/feature-requests/1531/

  - Restart application from Project menu
  https://sourceforge.net/p/omegat/feature-requests/1564/

  - Support theme plugins, choose theme in preferences
  https://sourceforge.net/p/omegat/feature-requests/1567/
